--- a/src/components/Header/Header.module.css
+++ b/src/components/Header/Header.module.css
@@ -1,8 +1,13 @@
 .background {
   position: absolute;
   z-index: -2;
-  background-color: black;
+  background-color: #554994;
   width: 100%;
   height: 100vh;
   top: 0;
+}
+
+.header {
+  height: 100vh;
+  /* box-shadow: 0 -4rem 3rem #554994 inset; */
 }
