--- a/src/components/Skills/SkillCard.module.css
+++ b/src/components/Skills/SkillCard.module.css
@@ -12,4 +12,9 @@
 .skill_image img {
   width: 60%;
   /* box-shadow: 0 10px 10px rgba(0, 0, 0, 0.2); */
+  transition: 0.1s all ease-in;
+}
+
+.skill_image img:hover {
+  width: 70%;
 }
