--- a/src/components/About/About.module.css
+++ b/src/components/About/About.module.css
@@ -31,3 +31,24 @@
     transform: translateY(0);
   }
 }
+
+@media (max-width: 1200px) {
+  .about {
+    height: 800px;
+  }
+
+  .about_content {
+    flex-direction: column;
+    gap: 1rem;
+  }
+
+  .about_container {
+    width: 75%;
+  }
+}
+
+@media (max-width: 800px) {
+  .about {
+    height: 600px;
+  }
+}
