--- a/src/components/About/AboutText.module.css
+++ b/src/components/About/AboutText.module.css
@@ -14,3 +14,15 @@
   font-size: 1.25rem;
   line-height: 1.75;
 }
+
+@media (max-width: 1200px) {
+  .about_card {
+    width: 80%;
+  }
+}
+
+@media (max-width: 800px) {
+  .about_card {
+    width: 100%;
+  }
+}
