--- a/src/components/Header/Header.module.css
+++ b/src/components/Header/Header.module.css
@@ -11,3 +11,9 @@
   height: 100vh;
   /* box-shadow: 0 -4rem 3rem #554994 inset; */
 }
+
+@media (max-width: 800px) {
+  .header {
+    height: 600px;
+  }
+}
