--- a/src/components/Skills/Skills.module.css
+++ b/src/components/Skills/Skills.module.css
@@ -19,3 +19,19 @@
   margin: 0 auto;
   display: flex;
 }
+
+@media (max-width: 1200px) {
+  .skills_section {
+    width: 80%;
+  }
+
+  .skills {
+    height: 400px;
+  }
+}
+
+@media (max-width: 800px) {
+  .skills_section {
+    width: 100%;
+  }
+}
